# catmap

./: .gitignore  .pylintrc  LICENSE  MANIFEST.in  README.md  build_test.yml  environment.yml  milestones.md  pyproject.toml  requirements.txt  setup.cfg  week7_env.yml
.github/workflows/: build_test.yml
catmap/: setup.cfg
catmap/src/catmap/: app.py  launcher.py
catmap/src/catmap/io/: model_loader.py
catmap/src/catmap/ui/component/: abstract_component.py  data_overview_expander.py  embed_results_page.py  embedding_plotter.py  header.py  homepage_header.py  info_button.py  open_embedding_page_button.py  page_1.py  page_2.py  return_home_button.py  select_column_dropdown.py  select_type_dropdown.py  title.py  visualization_overview_expander.py
catmap/tests/: test_app.py  test_app_ui.py  test_embed_ui.py  test_hello_world.py  test_launcher.py  test_model_loader.py
docs/: component_specification.md  functional-specification.md  functional_specification.md
docs/technology_review/: demo-streamlit.py  technology_review.md
entropy/tests/: test_hello_world.py
examples/: usage_examples.md
examples/users/: doctor.md  maintainer.md  patient.md  public_health.md
examples/users/use_cases/: embedding_and_interpreting_new_data.md  embedding_new_data.md  interpreting_embedding_results.md  interpreting_visualizations.md  visualizing_and_interpreting_cancer_datasets.md  visualizing_cancer_datasets.md
notebooks/: cancer_label_transfer_example.ipynb  catmap_rfc_classifier_poc.ipynb  colon_cancer_data_cleaning.md  nsclc_data_convert.R
(+2 files in other folders)
